- fix missing dev tools due to root container height issue - dev tools default collapsed, expanded when initiated via UI

--- a/app/styles.css
+++ b/app/styles.css
@@ -124,6 +124,7 @@
   }
 
   html, body {
+    @apply h-full;
     color-scheme: light dark;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
